# de-wildlife-strike

./: Dockerfile.dashboard  README.md  config.py  dbt_project.yml  pyproject.toml  requirements.dashboard.txt  requirements.pipeline.txt
.dbt/: .user.yml  profiles.yml
dashboard/: dashboard.py
flow/: main_flow.py
jobs/: ingest.py  ingestion_local_bq.py  run_dbt.py
macros/: hash_key.sql
models/marts/dimensions/: dim_aircraft.sql  dim_airport.sql  dim_date.sql  dim_flight_impact.sql  dim_flight_phase.sql  dim_operator.sql  dim_precipitation.sql  dim_species.sql  dim_species_quantity.sql  dim_visibility.sql  dim_warning.sql
models/marts/facts/: fact_wildlife_strike.sql
models/sources/: wildlife_strike_sources.yml
models/staging/: stg_wildlife_strike.sql  stg_wildlife_strike.yml
notebooks/: bird-eda-01.ipynb  config.py  fact-stage.ipynb  raw-stage.ipynb
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfvars  variables.tf
