[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.8.0",
    "dbt-core>=1.8.0",
    "google-cloud-bigquery>=3.25.0",
    "pandas>=2.2.0",
    "plotly>=5.23.0",
    "prefect>=2.19.0",
    "pyarrow>=17.0.0",
    "streamlit>=1.37.0",
]
